--- a/app/src/main/res/layout/activity_agent_sign_up.xml
+++ b/app/src/main/res/layout/activity_agent_sign_up.xml
@@ -124,6 +124,25 @@
                     android:drawableEnd="@drawable/ic_lock_black_24dp"
                     android:paddingEnd="10dp"
                     android:visibility="visible"/>
+                <EditText
+                    android:id="@+id/agent_signup_date_of_birth"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingTop="5dp"
+                    android:hint="Enter Date of birth(mm/dd/yyyy)"
+                    android:textSize="15sp"
+                    android:layout_below="@+id/agent_signup_confirm_pass"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/stroke_background"
+                    android:paddingStart="10dp"
+                    android:inputType="date"
+                    android:imeOptions="actionDone"
+                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
+                    android:paddingEnd="10dp"
+                    android:visibility="visible"/>
 
                 <Button
                     android:id="@+id/agent_submit_personal_details"
@@ -136,7 +155,7 @@
                     android:textColor="@color/white"
                     android:paddingStart="30dp"
                     android:paddingEnd="30dp"
-                    android:layout_below="@+id/agent_signup_confirm_pass"
+                    android:layout_below="@+id/agent_signup_date_of_birth"
                     android:background="@drawable/green_round_background"
                     android:visibility="visible"/>
 
