--- a/app/src/main/res/layout/activity_provider_sign_up.xml
+++ b/app/src/main/res/layout/activity_provider_sign_up.xml
@@ -122,7 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:paddingTop="5dp"
-                    android:text="Enter your date of birth"
+                    android:hint="Enter date of birth (mm/dd/yyyy)"
                     android:textSize="15sp"
                     android:gravity="center_vertical"
                     android:layout_below="@+id/providerServiceSubCategory"
@@ -132,11 +132,11 @@
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/stroke_background"
                     android:paddingStart="10dp"
-                    android:drawableEnd="@drawable/ic_edit_black_24dp"
+                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
                     android:paddingEnd="10dp"
                     android:visibility="visible"
                     android:inputType="date"
-                    android:imeOptions="actionDone"/>
+                    android:imeOptions="actionNext"/>
 
                 <EditText
                     android:id="@+id/provider_signup_website_url"
@@ -174,7 +174,6 @@
                     android:visibility="visible"/>
 
                 //user Profile pic and gender
-
                 <RadioGroup
                     android:id="@+id/radioGroupProvider"
                     android:layout_width="match_parent"
