--- a/app/src/main/res/layout/activity_provider_sign_up.xml
+++ b/app/src/main/res/layout/activity_provider_sign_up.xml
@@ -116,6 +116,27 @@
                     android:paddingEnd="10dp"
                     android:visibility="visible"
                     android:background="@drawable/stroke_background"/>
+                <EditText
+                    android:id="@+id/provider_agentRefId"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingTop="5dp"
+                    android:hint="Agent Reference Id"
+                    android:textSize="15sp"
+                    android:gravity="center_vertical"
+                    android:layout_below="@+id/providerServiceSubCategory"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/stroke_background"
+                    android:paddingStart="10dp"
+                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
+                    android:paddingEnd="10dp"
+                    android:visibility="visible"
+                    android:inputType="date"
+                    android:imeOptions="actionNext"/>
+
 
                 <EditText
                     android:id="@+id/provider_date_of_birth"
@@ -125,7 +146,7 @@
                     android:hint="Enter date of birth (mm/dd/yyyy)"
                     android:textSize="15sp"
                     android:gravity="center_vertical"
-                    android:layout_below="@+id/providerServiceSubCategory"
+                    android:layout_below="@+id/provider_agentRefId"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15sp"
