--- a/app/src/main/res/layout/main_search_activity_items.xml
+++ b/app/src/main/res/layout/main_search_activity_items.xml
@@ -1,16 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="300dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="4dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="12dp">
 
-    <TextView
-        android:id="@+id/services"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/stroke_background"
-        android:layout_margin="2dp"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/search_item_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="2dp"
+            android:src="@drawable/batman"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:layout_below="@+id/servicer_name"
+            android:id="@+id/search_service_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category :"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"/>
+        <TextView
+            android:id="@+id/servicer_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name :"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/servicer_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Phone :"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_below="@+id/search_service_type"/>
+
+        <TextView
+            android:id="@+id/servicer_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Address :"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/servicer_phone"/>
+
+        <TextView
+            android:id="@+id/search_address_fromdb"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/servicer_address"
+            android:layout_margin="10dp"
+            android:text="dfsdfdgg"/>
+
+        <TextView
+            android:id="@+id/search_websiteUrl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_address_fromdb"
+            android:layout_margin="10dp"
+            android:text="WebSite Url:"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:id="@+id/search_desp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_item_image"
+            android:layout_margin="10dp"
+            android:text="nurse"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="15dp"
+            android:layout_alignParentEnd="true"/>
+
+        <TextView
+            android:id="@+id/search_name_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/servicer_name"
+            android:text="sai"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="18dp"
+            android:textSize="14sp"/>
+        <TextView
+            android:id="@+id/search_category_from_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/search_service_type"
+            android:layout_below="@+id/search_name_db"
+            android:text="carpenter"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="18dp"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/search_phone_from_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/servicer_phone"
+            android:layout_below="@+id/search_category_from_db"
+            android:text="123456889"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="18dp"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/search_websiteUrl_from_db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/search_websiteUrl"
+            android:layout_below="@+id/search_address_fromdb"
+            android:text="www.saiappdeveloper.com"
+            android:layout_marginTop="10dp"
+            android:textSize="14sp"/>
+
+
+    </RelativeLayout>
 
 
 
-</RelativeLayout>
+
+
+
+
+
+</android.support.v7.widget.CardView>
