--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,30 +101,28 @@
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/stroke_background_white"
                         android:drawableEnd="@drawable/ic_location_on_white_24dp"/>
-                    <Spinner
-                        android:id="@+id/mainAcitivity_Category"
-                        android:layout_below="@+id/mainActivity_location"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/white"
-                        android:layout_marginTop="10dp">
-                    </Spinner>
-                    <Spinner
-                        android:id="@+id/mainActivity_Sub_Category"
-                        android:layout_toRightOf="@+id/mainAcitivity_Category"
-                        android:layout_below="@+id/mainActivity_location"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/white"
-                        android:layout_marginTop="10dp">
-                    </Spinner>
 
+                    <AutoCompleteTextView
+                        android:id="@+id/edt_search_items"
+                        android:layout_width="270dp"
+                        android:layout_height="40dp"
+                        android:layout_below="@+id/mainActivity_location"
+                        android:background="@drawable/stroke_background_white"
+                        android:drawableEnd="@drawable/ic_search_white_24dp"
+                        android:paddingEnd="10dp"
+                        android:paddingStart="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:hint="Enter Search items"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textSize="14sp"/>
                     <Button
-                        android:layout_toRightOf="@+id/mainActivity_Sub_Category"
+                       android:layout_toRightOf="@+id/edt_search_items"
                         android:layout_below="@+id/mainActivity_location"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
-                        android:text="Go"/>
+                        android:text="Go"
+                       android:id="@+id/searchGo"/>
 
                 </RelativeLayout>
 
