--- a/app/src/main/res/layout/main_search_activity_items.xml
+++ b/app/src/main/res/layout/main_search_activity_items.xml
@@ -2,9 +2,11 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="4dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="12dp">
 
@@ -18,6 +20,7 @@
             android:layout_height="100dp"
             android:layout_margin="2dp"
             android:src="@drawable/batman"
+            android:scaleType="fitXY"
             android:layout_alignParentEnd="true" />
 
         <TextView
@@ -63,13 +66,13 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:layout_below="@+id/servicer_phone"/>
 
         <TextView
             android:id="@+id/search_address_fromdb"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/servicer_address"
             android:layout_margin="10dp"
             android:text="dfsdfdgg"/>
@@ -137,6 +140,16 @@
             android:text="www.saiappdeveloper.com"
             android:layout_marginTop="10dp"
             android:textSize="14sp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+           android:layout_below="@+id/search_websiteUrl"
+            android:background="@color/colorPrimaryDark"
+            android:layout_marginEnd="3dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="5dp"/>
 
 
     </RelativeLayout>
