--- a/app/src/main/res/layout/activity_agent_profile_settings.xml
+++ b/app/src/main/res/layout/activity_agent_profile_settings.xml
@@ -7,21 +7,18 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".UI.Agent.AgentProfileSettings">
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true">
-
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
             <ImageView
                 android:id="@+id/expandedImage"
                 android:layout_width="match_parent"
@@ -30,18 +27,21 @@
                 android:background="@drawable/batman"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/agentProfileSettingsToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                app:layout_collapseMode="pin">
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
         <TextView
             android:id="@+id/agent_refered"
             android:layout_width="wrap_content"
@@ -51,7 +51,6 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/colorPrimaryDark"/>
-
         <TextView
             android:id="@+id/agent_refered_count"
             android:layout_width="wrap_content"
@@ -62,24 +61,12 @@
             android:textStyle="bold"
             android:textColor="@color/black"
             android:layout_toRightOf="@+id/agent_refered"/>
-
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/agent_profile_recyclerview"
                 android:layout_below="@+id/agent_refered_count">
-
             </android.support.v7.widget.RecyclerView>
-
-
-
         </RelativeLayout>
-
-
-
-
-
     </android.support.v4.widget.NestedScrollView>
-
-
 </android.support.design.widget.CoordinatorLayout>
