--- a/app/src/main/res/layout/main_search_activity_items.xml
+++ b/app/src/main/res/layout/main_search_activity_items.xml
@@ -14,11 +14,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageButton
+            android:id="@+id/searchItemBlockOption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_more_vert_black_24dp"
+            android:layout_alignParentEnd="true"
+            android:background="@color/white"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"/>
+
         <ImageView
             android:id="@+id/search_item_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_margin="2dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="35dp"
             android:src="@drawable/batman"
             android:scaleType="fitXY"
             android:layout_alignParentEnd="true" />
@@ -74,7 +85,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/servicer_address"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20sp"
             android:text="dfsdfdgg"/>
 
         <TextView
@@ -139,7 +152,7 @@
             android:layout_below="@+id/search_address_fromdb"
             android:text="www.saiappdeveloper.com"
             android:layout_marginTop="10dp"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
         <View
             android:layout_width="match_parent"
@@ -150,15 +163,6 @@
             android:layout_marginStart="2dp"
             android:layout_marginBottom="1dp"
             android:layout_marginTop="5dp"/>
-
-
     </RelativeLayout>
-
-
-
-
-
-
-
 
 </android.support.v7.widget.CardView>
