--- a/app/src/main/res/layout/activity_agent_login.xml
+++ b/app/src/main/res/layout/activity_agent_login.xml
@@ -16,7 +16,8 @@
             android:id="@+id/fl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="30dp">
+            android:paddingTop="30dp"
+            android:focusableInTouchMode="true">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -24,14 +25,15 @@
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginStart="30dp"
-                android:background="@drawable/white_round_background">
+                android:background="@drawable/white_round_background"
+                android:focusableInTouchMode="true">
 
                 <EditText
                     android:id="@+id/agent_login_name"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_marginTop="80dp"
-                    android:hint="Enter email"
+                    android:hint="Enter username"
                     android:layout_centerHorizontal="true"
                     android:textSize="15sp"
                     android:layout_marginStart="50sp"
@@ -53,6 +55,7 @@
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/stroke_background"
                     android:paddingStart="10dp"
+                    android:inputType="textPassword"
                     android:drawableEnd="@drawable/ic_lock_black_24dp"
                     android:paddingEnd="10dp"/>
 
@@ -88,19 +91,10 @@
                     android:layout_margin="10dp"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
-                    android:textSize="16sp"/>
-
-                <TextView
-                    android:id="@+id/txt_agent_forget_pass"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/txt_agent_signUp"
-                    android:text="forget password?"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="10dp"
-                    android:textColor="@android:color/holo_red_dark"
                     android:textSize="16sp"
                     android:paddingBottom="50dp"/>
+
+
 
 
 
@@ -109,7 +103,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/batman"/>
+                android:src="@drawable/one_wel"/>
         </FrameLayout>
 
 
