--- a/app/src/main/res/layout/activity_agent_profile_settings.xml
+++ b/app/src/main/res/layout/activity_agent_profile_settings.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:background="@drawable/batman"
+                android:background="@drawable/one_wel_loge"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
             <android.support.v7.widget.Toolbar
@@ -42,30 +42,53 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/agent_refered"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Number of persons you refered:"
-            android:layout_margin="10dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"/>
-        <TextView
-            android:id="@+id/agent_refered_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="123"
-            android:layout_margin="10dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_toRightOf="@+id/agent_refered"/>
+
+         <TextView
+                android:id="@+id/agent_refered"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Number of persons you refered:"
+                android:layout_margin="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"/>
+          <TextView
+                android:id="@+id/agent_refered_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_margin="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_toRightOf="@+id/agent_refered"/>
+
+            <TextView
+                android:id="@+id/agent_refered_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Promoter Referred Id: "
+                android:layout_margin="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@+id/agent_refered"
+                android:textColor="@color/colorPrimaryDark"/>
+            <TextView
+                android:id="@+id/agent_refered_id_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:layout_margin="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_below="@+id/agent_refered"
+                android:layout_toRightOf="@+id/agent_refered_id"/>
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/agent_profile_recyclerview"
-                android:layout_below="@+id/agent_refered_count">
+                android:layout_below="@+id/agent_refered_id">
             </android.support.v7.widget.RecyclerView>
         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
