--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:layout_marginStart="10dp"
-                android:src="@drawable/one_wel" />
+                android:src="@drawable/one_wel_loge" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:text="Agent"
+                android:text="Promoter"
                 android:textAllCaps="false"
                 android:background="@drawable/white_round_background"
                 android:layout_marginEnd="5dp"
@@ -93,7 +93,8 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="true">
 
                     <AutoCompleteTextView
                         android:id="@+id/mainActivity_location"
