--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorPrimaryDark"
-                android:text="Provider"
+                android:text="Advertisement"
                 android:background="@drawable/white_round_background"
                 android:textAllCaps="false"
                 android:layout_marginEnd="5dp"
