--- a/app/src/main/res/layout/activity_provider_sign_up.xml
+++ b/app/src/main/res/layout/activity_provider_sign_up.xml
@@ -146,7 +146,7 @@
                     android:paddingStart="10dp"
                     android:paddingEnd="10dp"
                     android:visibility="visible"
-                    android:inputType="date"
+                    android:inputType="text"
                     android:imeOptions="actionNext"/>
 
 
