--- a/app/src/main/res/layout/activity_agent_login.xml
+++ b/app/src/main/res/layout/activity_agent_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.Agent.AgentLoginActivity"
-    android:background="@drawable/background_image">
+    android:background="#F7F5F5">
 
 
     <RelativeLayout
