--- a/app/src/main/res/layout/activity_agent_profile_settings.xml
+++ b/app/src/main/res/layout/activity_agent_profile_settings.xml
@@ -43,8 +43,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/logoutAgent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Logout"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textAllCaps="false"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                android:paddingEnd="20dp"
+                android:paddingStart="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/green_round_background"/>
+
          <TextView
                 android:id="@+id/agent_refered"
+             android:layout_below="@+id/logoutAgent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Number of persons you refered:"
@@ -61,6 +80,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
+              android:layout_below="@+id/logoutAgent"
                 android:layout_toRightOf="@+id/agent_refered"/>
 
             <TextView
