--- a/app/src/main/res/layout/activity_agent_sign_up.xml
+++ b/app/src/main/res/layout/activity_agent_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.Agent.AgentSignUpActivity"
-    android:background="@drawable/background_image">
+    android:background="#F7F5F5">
 
 
     <RelativeLayout
@@ -127,25 +127,6 @@
                     android:drawableEnd="@drawable/ic_lock_black_24dp"
                     android:paddingEnd="10dp"
                     android:visibility="visible"/>
-                <EditText
-                    android:id="@+id/agent_signup_date_of_birth"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:paddingTop="5dp"
-                    android:hint="Enter Date of birth(mm/dd/yyyy)"
-                    android:textSize="15sp"
-                    android:layout_below="@+id/agent_signup_confirm_pass"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="15sp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@drawable/stroke_background"
-                    android:paddingStart="10dp"
-                    android:inputType="date"
-                    android:imeOptions="actionDone"
-                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
-                    android:paddingEnd="10dp"
-                    android:visibility="visible"/>
 
                 <Button
                     android:id="@+id/agent_submit_personal_details"
@@ -158,7 +139,7 @@
                     android:textColor="@color/white"
                     android:paddingStart="30dp"
                     android:paddingEnd="30dp"
-                    android:layout_below="@+id/agent_signup_date_of_birth"
+                    android:layout_below="@+id/agent_signup_confirm_pass"
                     android:background="@drawable/green_round_background"
                     android:visibility="visible"/>
 
@@ -279,12 +260,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Male"
-                        android:layout_marginEnd="50dp"/>
+                        android:layout_marginEnd="20dp"/>
                     <RadioButton
                         android:id="@+id/radio_btn_female"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="20dp"
                         android:text="Female"/>
+                    <RadioButton
+                        android:id="@+id/radio_btn_others"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Others"/>
                 </RadioGroup>
 
                 <ImageView
