implemented 1wel customer

--- a/app/src/main/res/layout/activity_provider_sign_up.xml
+++ b/app/src/main/res/layout/activity_provider_sign_up.xml
@@ -12,12 +12,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp">
+
         <FrameLayout
             android:id="@+id/flprovider"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="30dp"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:paddingTop="30dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -66,39 +67,43 @@
                     android:paddingEnd="10dp"
                     android:textSize="15sp"
                     android:visibility="visible" />
+
                 <LinearLayout
                     android:id="@+id/privacy"
-                    android:background="@drawable/stroke_background"
-                    android:layout_below="@+id/provider_signup_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginEnd="25dp"
+                    android:layout_below="@+id/provider_signup_phone"
                     android:layout_marginStart="25dp"
-                    android:layout_marginTop="8dp">
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="25dp"
+                    android:background="@drawable/stroke_background"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Phone number privacy"
-                        android:layout_margin="8dp"/>
+                        android:layout_margin="8dp"
+                        android:text="Phone number privacy" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:weightSum="2">
+
                         <CheckBox
                             android:id="@+id/privacyShow"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="show"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"
+                            android:text="show" />
+
                         <CheckBox
                             android:id="@+id/privacyHide"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="hide"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1"
+                            android:text="hide" />
 
                     </LinearLayout>
 
@@ -159,13 +164,14 @@
                     android:layout_marginTop="15sp"
                     android:layout_marginBottom="5dp"
                     android:background="@drawable/stroke_background"
-                    android:gravity="center_vertical"
-                    android:hint="Service Description"
+                    android:gravity="bottom"
+                    android:hint="Advertisement Details"
                     android:imeOptions="actionNext"
                     android:inputType="text"
                     android:paddingStart="10dp"
                     android:paddingTop="5dp"
                     android:paddingEnd="10dp"
+                    android:paddingBottom="10dp"
                     android:textSize="15sp"
                     android:visibility="visible" />
 
@@ -173,69 +179,60 @@
                     android:id="@+id/discountPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_below="@+id/provider_service_descp"
                     android:layout_marginStart="25dp"
-                    android:layout_marginEnd="25dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="25dp"
                     android:background="@drawable/stroke_background"
-                    android:layout_below="@+id/provider_service_descp">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Service Discount(%)"
-                        android:textColor="@color/black"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp"
-                        android:layout_marginStart="8dp"/>
+                        android:text="Service Discount(%)"
+                        android:textColor="@color/black" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="2">
+                        android:weightSum="4">
+
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="MIN :"
                             android:gravity="center_horizontal"
-                            />
+                            android:text="MIN :" />
 
                         <EditText
                             android:id="@+id/edtMinDiscount"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:inputType="number"
                             android:imeOptions="actionNext"
-                            android:maxLength="3"/>
+                            android:inputType="number"
+                            android:maxLength="3" />
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="2">
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="MAX :"
-                            android:gravity="center_horizontal"/>
+                            android:gravity="center_horizontal"
+                            android:text="MAX :" />
 
                         <EditText
                             android:id="@+id/edtMaxDiscount"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:inputType="number"
                             android:imeOptions="actionNext"
-                            android:maxLength="3"/>
+                            android:inputType="number"
+                            android:maxLength="3" />
 
                     </LinearLayout>
-
-
 
                 </LinearLayout>
 
@@ -259,7 +256,6 @@
                     android:paddingEnd="10dp"
                     android:textSize="15sp"
                     android:visibility="visible" />
-
 
 
                 <EditText
@@ -320,8 +316,9 @@
                         android:id="@+id/provider_radio_btn_female"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Female"
-                        android:layout_marginEnd="20dp"/>
+                        android:layout_marginEnd="20dp"
+                        android:text="Female" />
+
                     <RadioButton
                         android:id="@+id/provider_radio_btn_others"
                         android:layout_width="wrap_content"
@@ -414,11 +411,12 @@
                     android:textColor="@color/white"
                     android:visibility="gone" />
             </RelativeLayout>
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/one_wel"/>
+                android:src="@drawable/one_wel" />
         </FrameLayout>
 
 
