--- a/app/src/main/res/layout/activity_agent_sign_up.xml
+++ b/app/src/main/res/layout/activity_agent_sign_up.xml
@@ -96,7 +96,7 @@
                     android:paddingTop="5dp"
                     android:hint="Enter new password"
                     android:textSize="15sp"
-                    android:layout_below="@+id/agent_signup_Location"
+                    android:layout_below="@+id/agent_signup_Refid"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15sp"
@@ -116,6 +116,26 @@
                     android:hint="Enter re-enter password"
                     android:textSize="15sp"
                     android:layout_below="@+id/agent_signup_pass"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15sp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/stroke_background"
+                    android:paddingStart="10dp"
+                    android:inputType="textPassword"
+                    android:imeOptions="actionNext"
+                    android:drawableEnd="@drawable/ic_lock_black_24dp"
+                    android:paddingEnd="10dp"
+                    android:visibility="visible"/>
+
+                <EditText
+                    android:id="@+id/agent_signup_Refid"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingTop="5dp"
+                    android:hint="Enter ref ID"
+                    android:textSize="15sp"
+                    android:layout_below="@+id/agent_signup_Location"
                     android:layout_centerHorizontal="true"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15sp"
